--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,16 @@
-spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=none
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 server.error.include-message=always
 spring.jpa.show-sql=true
+jwt.expirationTime=3600000
+jwt.secret=asdsalqrk1232115dfas@!#!@sds
+
+spring.cache.jcache.config = classpath:ehcache.xml
+
+spring.liquibase.change-log=classpath:liquibase-changeLog.xml
+
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/datab?useUnicode=true&serverTimezone=UTC
+
+
+spring.datasource.username=kostek5255
+spring.datasource.password=Dupa5122@
